--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mui": "^0.0.1",
     "next": "15.5.2",
     "react": "19.1.0",
+    "react-datepicker": "^8.9.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "zustand": "^5.0.8"
